update: update personal information

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,10 @@
 name: "Tianyi Li"
-title: "Assistant Professor, Aalborg University"
+title: "Assistant Professor, Ph.D."
 email: "tianyi [AT] cs.aau.dk"
 profile_pic: "/images/tianyi.jpg"
 twitter: ""
 linkedin: ""
 github: "https://github.com/litianyi-cs-dkaau"
-google_scholar: "https://scholar.google.com/citations?user=NeeHV-IAAAAJ&hl=en&oi=ao"
+google_scholar: "https://scholar.google.com/citations?hl=en&user=NeeHV-IAAAAJ&view_op=list_works&sortby=pubdate"
+DBLP: "https://dblp.org/pid/85/11154-5.html"
 google_analystics_tracking_id: ''
