--- a/_data/classes.yaml
+++ b/_data/classes.yaml
@@ -1,5 +1,4 @@
 classes:
     - name: "Algorithm and Data Structures"
-      time: "Fall 2023"
-      title: "Advances in Foundation Models"
+      time: "Fall 2022-2023"
       role: "Lecturer"
