--- a/_data/services.yaml
+++ b/_data/services.yaml
@@ -1,9 +1,56 @@
 services:
-  - title: "The 29th International Conference on Database System for Advanced Applications (DASFAA 2024)"
+  - title: "The 38th AAAI Conference on Artificial Intelligence (AAAI 2024)"
     role: PC Member
     conference: y
 
-  - title: "Sustainability: Special Issue \"Renewable and Sustainable Energy Systems: Architecture, Methodology and Technology, 2nd Edition\""
+  - title: "2024 International Joint Conference on Artificial Intelligence (IJCAI 2024)"
+    role: PC Member
+    conference: y
+
+  - title: "The 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining  (KDD 2024)"
+    role: PC Member
+    conference: y
+
+  - title: "The Conference on Information and Knowledge Management (CIKM 2024)"
+    role: PC Member
+    conference: y
+
+  - title: "The 2024 SIAM International Conference on Data Mining (SDM 2024)"
+    role: PC Member
+    conference: y
+
+  - title: "The 39th IEEE International Conference on Data Engineering  (ICDE 2023)"
+    role: PC Member
+    conference: y
+
+  - title: "The 38th AAAI Conference on Artificial Intelligence (AAAI 2023)"
+    role: PC Member
+    conference: y
+
+  - title: "The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining  (KDD 2023)"
+    role: PC Member
+    conference: y
+
+  - title: "The 32nd ACM International Conference on Information and Knowledge Management   (CIKM 2023)"
+    role: PC Member
+    conference: y
+
+  - title: "The 31st ACM International Conference on Information and Knowledge Management (CIKM 2022)"
+    role: PC Member
+    conference: y
+
+  - title: "Mathematics, Special Issue \"Mathematical Modeling for Parallel and Distributed Processing\""
     role: Leading Guest Editor
     journal: y
+
+  - title: "The institution of Engineering and Technology (IET), Special Issue \"Distributed Optimization and Machine Learning for Resilient Energy Systems\""
+    role: Guest Editor
+    journal: y
+
+  - title: "2024 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm),  Workshop on Optimal and Green Operation of Multi-energy Smart Grids"
+    role: PC Co-chair
+    conference: y
+
+
+ 
   
