--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -1,7 +1,7 @@
 students:
     - name: "Xiushang Wu"
-      time: "December 2023 to present"
-      type: "PhD Student"
+      time: "January 2024 to present"
+      type: "PhD Student (Joint advisors: Kristian Torp and Christian S. Jensen)"
       topic: "Trajectory data cleaning"
       phd: y
 
@@ -12,7 +12,7 @@ students:
       visiting: y
     
     - name: "Zhen Song"
-      time: "October 2022 to September 2023"
+      time: "October 2022 to November 2023"
       type: "Ph.D. candidate from Northeastern Univeristy"
       topic: "Spatio-Temporal Graph Neural Networks"
       visiting: y
@@ -24,7 +24,7 @@ students:
       visiting: y
 
     - name: "Tiantian Liu"
-      time: "September 2023 to present"
+      time: "September 2023 to January 2024"
       type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
       topic: "Optimized Maritime Communication"
       postdoc: y
