--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -80,10 +80,10 @@ papers:
     
   - title: " Spatio-temporal trajectory similarity measures: A comprehensive survey and quantitative study."
     authors: "Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, Tianyi Li+, Yunjun Gao"
-    venue: "(JCR Q1, CCF A) IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024."
+    venue: "(JCR Q1, CCF A) IEEE Transactions on Knowledge and Data Engineering (TKDE), 2023."
     paper_pdf: " "
     journal: y
-    beforeyear2022: y 
+    year2023: y 
 
   - title: "Evolutionary Clustering of Moving Objects."
     authors: "Tianyi Li+, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu."
