--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -44,7 +44,7 @@ papers:
 
   - title: "FedAGL: A Communication-Efficient Federated Vehicular Network."
     authors: "Liu Su, Yushuai Li, Peiyuan Guan, Tianyi Li+, Amir Taherkordi, Christian S. Jensen. "
-    venue: "(JCR Q1, CCF A)IEEE Transactions on Intelligent Vehicles (TIV), 2024."
+    venue: "(JCR Q1) IEEE Transactions on Intelligent Vehicles (TIV), 2024."
     paper_pdf: ""
     journal: y
     year2024: y
