--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -7,7 +7,7 @@ papers:
     year2024: y
 
   - title: "SWISP: Distributed Convoy Mining via Sliding Window-based Indexing and Sub-track Partitioning."
-    authors: "Chenxu Wang, Xin Yang, Tianyi Li+, Jiaxing Wei, Pinghui Wang,  Hongzhen Xian, Christian S. Jensen."
+    authors: "Chenxu Wang, Xin Yang, Tianyi Li+, Jiaxing Wei, Pinghui Wang,  Hongzhen Xiang, Christian S. Jensen."
     venue: "(CORE A*, CCF A) The 40th IEEE International Conference on Data Engineering (ICDE), 2024."
     paper_pdf: ""
     conference: y
@@ -122,7 +122,7 @@ papers:
 
 
   - title: "An Effective and Efficient Truth Discovery Framework over Data Streams."
-    authors: "Tianyi Li+, Ruikai Huang, Lu Chen, Christian S. Jensen, Torben Bach Pedersen."
+    authors: "Tianyi Li+, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu."
     venue: "(CORE A, CCF B) International Conference on Extending Database Technology (EDBT), 2017."
     paper_pdf: ""
     conference: y
