--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -52,7 +52,7 @@ papers:
 
   - title: "Digital Twin Empowered PV Power Prediction."
     authors: "Xiaoyu Zhang, Yushuai Li, Tianyi Li+, Yonghao Gui, Qiuye Sun, David Wenzhong Gao. "
-    venue: "(JCR Q1) Journal of Modern Power Systems and Clean Energy, 2024."
+    venue: "(JCR Q1) Journal of Modern Power Systems and Clean Energy (MPCE), 2024."
     paper_pdf: ""
     journal: y
     year2024: y
