--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -3,6 +3,6 @@ projects:
     subtitle: "MobiSpaces: New Data Spaces for Green Mobility"
     role: "Co-investigator"
 
-  - title: "Digital Research Centre Denmark Project (DIRECT)"
+  - title: "Digital Research Centre Denmark Project (DIREC)"
     subtitle: "Multimodal Data Processing of Earth Observation Data"
     role: "Co-investigator"
