--- a/_data/services.yaml
+++ b/_data/services.yaml
@@ -1,8 +1,4 @@
 services:
-  - title: "The 39th AAAI Conference on Artificial Intelligence (AAAI 2025)"
-    role: PC Member
-    conference: y
-    
   - title: "21th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services (MobiQuitous 2024)"
     role: Workshop Co-chair
     conference: y
@@ -10,47 +6,11 @@ services:
   - title: "2024 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm),  Workshop on Optimal and Green Operation of Multi-energy Smart Grids"
     role: PC Co-chair
     conference: y
-
-  - title: "The 38th AAAI Conference on Artificial Intelligence (AAAI 2024)"
+    
+  - title: "ICDE 2025, AAAI 2024-2025, IJCAI 2024, KDD 2023-2025, CIKM 2022-2024, SDM 2024, IEEE BigData 2024"
     role: PC Member
     conference: y
-
-  - title: "2024 International Joint Conference on Artificial Intelligence (IJCAI 2024)"
-    role: PC Member
-    conference: y
-
-  - title: "The 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining  (KDD 2024)"
-    role: PC Member
-    conference: y
-
-  - title: "The Conference on Information and Knowledge Management (CIKM 2024)"
-    role: PC Member
-    conference: y
-
-  - title: "The 2024 SIAM International Conference on Data Mining (SDM 2024)"
-    role: PC Member
-    conference: y
-
-  - title: "The 39th IEEE International Conference on Data Engineering  (ICDE 2023)"
-    role: PC Member
-    conference: y
-
-  - title: "The 38th AAAI Conference on Artificial Intelligence (AAAI 2023)"
-    role: PC Member
-    conference: y
-
-  - title: "The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining  (KDD 2023)"
-    role: PC Member
-    conference: y
-
-  - title: "The 32nd ACM International Conference on Information and Knowledge Management   (CIKM 2023)"
-    role: PC Member
-    conference: y
-
-  - title: "The 31st ACM International Conference on Information and Knowledge Management (CIKM 2022)"
-    role: PC Member
-    conference: y
-
+    
   - title: "Mathematics, Special Issue \"Mathematical Modeling for Parallel and Distributed Processing\""
     role: Leading Guest Editor
     journal: y
