--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,12 +1,18 @@
 papers:
   
+  - title: "Camel: Efficient Compression of Floating-Point Time Series."
+    authors: "Yuanyuan Yao, Lu Chen, Ziquan Fang, Yunjun Gao, Christian S. Jensen, Tianyi Li."
+    venue: "(CORE A*, CCF A) The 2025 ACM SIGMOD/PODS International Conference on Management of Data (SIGMOD), 2025."
+    paper_pdf: ""
+    conference: y
+    year2024: y
+  
   - title: "ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling."
     authors: "Zhen Song, Yu Gu, Tianyi Li+*, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu."
     venue: "(CORE A*, CCF A) The 2024 ACM SIGMOD/PODS International Conference on Management of Data (SIGMOD), 2024."
     paper_pdf: ""
     conference: y
     year2024: y
-
 
   - title: "SWISP: Distributed Convoy Mining via Sliding Window-based Indexing and Sub-track Partitioning."
     authors: "Chenxu Wang, Xin Yang, Tianyi Li+, Jiaxing Wei, Pinghui Wang,  Hongzhen Xiang, Christian S. Jensen."
