--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -2,7 +2,7 @@ papers:
   
   - title: "Camel: Efficient Compression of Floating-Point Time Series."
     authors: "Yuanyuan Yao, Lu Chen, Ziquan Fang, Yunjun Gao, Christian S. Jensen, Tianyi Li+."
-    venue: "(CORE A*, CCF A) The 2025 ACM SIGMOD/PODS International Conference on Management of Data (SIGMOD), 2025."
+    venue: "(CORE A*, CCF A) The 2025 ACM SIGMOD/PODS International Conference on Management of Data (SIGMOD+), 2025."
     paper_pdf: ""
     conference: y
     year2025: y
