--- a/_data/services.yaml
+++ b/_data/services.yaml
@@ -1,5 +1,5 @@
 services:
-  - title: "21th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services (MobiQuitous 2024)"
+  - title: "21st EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services (MobiQuitous 2024)"
     role: Workshop Co-chair
     conference: y
 
