--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -5,6 +5,18 @@ students:
       topic: "Trajectory data cleaning"
       phd: y
 
+    - name: "Xiaowei Mao"
+      time: "September 2024 to Feburary 2025"
+      type: "Ph.D. candidate from Beijing Jiaotong University"
+      topic: "Spatio-temporal Data Analysis"
+      visiting: y
+
+    - name: "Zhongming Yao"
+      time: "December 2023 to November 2024"
+      type: "Ph.D. candidate from Northeastern Univeristy"
+      topic: "Trajectory Data Management with Blockchain"
+      visiting: y
+
     - name: "Yumeng Song"
       time: "October 2022 to September 2024"
       type: "Ph.D. candidate from Northeastern Univeristy"
@@ -15,19 +27,7 @@ students:
       time: "October 2022 to November 2023"
       type: "Ph.D. candidate from Northeastern Univeristy"
       topic: "Spatio-Temporal Graph Neural Networks"
-      visiting: y
-    
-    - name: "Zhongming Yao"
-      time: "December 2023 to November 2024"
-      type: "Ph.D. candidate from Northeastern Univeristy"
-      topic: "Trajectory Data Management with Blockchain"
-      visiting: y
-
-    - name: "Tiantian Liu"
-      time: "September 2023 to January 2024"
-      type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
-      topic: "Optimized Maritime Communication"
-      postdoc: y
+      visiting: y       
 
     - name: "Hengyu Liu"
       time: "December 2023 to present"
@@ -35,12 +35,21 @@ students:
       topic: "Maritime Data Analysis"
       link: https://hengyuliu.com/
       postdoc: y
-      
+            
     - name: "Haomin Yu"
       time: "March 2024 to present"
       type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
       topic: "Maritime Data Prediction"
       postdoc: y
+
+    - name: "Tiantian Liu"
+      time: "September 2023 to January 2024"
+      type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
+      topic: "Optimized Maritime Communication"
+      postdoc: y
+
+  
+
 
 
     
