--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -6,6 +6,13 @@ papers:
     paper_pdf: ""
     conference: y
     year2025: y
+    
+  - title: "Quantifying Point Contributions: A Lightweight Framework for Efficient and Effective Query-Driven Trajectory Simplification"
+    authors: "Yumeng Song, Yu Gu, Tianyi Li+*, Yushuai Li, Christian S. Jensen, Ge Yu"
+    venue: "(CORE A*, CCF A) The 51st International Conference on Very Large Databases (<b>PVLDB</b>), 2025."
+    paper_pdf: ""
+    conference: y
+    year2025: y
 
   - title: "Efficient Cost Modeling of Space-filling Curves."
     authors: "Guanli Liu, Lars Kulik, Christian S. Jensen, Tianyi Li+, Renata Borovica-Gajic, Jianzhong Qi."
