--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -1,14 +1,14 @@
 awards:
   - name: "Best Paper <b>(first author)</b>"
-    conference: The 36th IEEE International Conference on Data Engineering (ICDE) <i>(CORE A*, CCF A)</i>
-    time: 2022
+    conference: The 36th IEEE International Conference on Data Engineering (ICDE)
+    time: 2022.  <i>(CORE A*, CCF A)</i>
 
   - name: Best Paper
     conference: International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE)
-    time: 2023
+    time: 2023.
 
   - name: One of the Best Papers
     conference: The 39th National Database Conference (NDBC)
-    time: 2022 
+    time: 2022. 
 
  
