--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -37,7 +37,7 @@ students:
       postdoc: y
             
     - name: "Haomin Yu"
-      time: "March 2024 to present"
+      time: "March 2024 to September 2024"
       type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
       topic: "Maritime Data Prediction"
       postdoc: y
