--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -78,6 +78,13 @@ papers:
     journal: y
     year2024: y
 
+  - title: "Networked Digital Twins for Autonomous Vehicles: A New Perspective"
+    authors: "Tianyi Li+, Yushuai Li, Yumeng Song, Zhongming Yao, Wei Gao, David Wenzhong Gao. "
+    venue: "(JCR Q1) IEEE Transactions on Intelligent Vehicles (<b>TIV</b>), 2024."
+    paper_pdf: ""
+    journal: y
+    year2024: y
+
   - title: "FedAGL: A Communication-Efficient Federated Vehicular Network."
     authors: "Liu Su, Yushuai Li, Peiyuan Guan, Tianyi Li+, Amir Taherkordi, Christian S. Jensen. "
     venue: "(JCR Q1) IEEE Transactions on Intelligent Vehicles (<b>TIV</b>), 2024."
