--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -78,7 +78,7 @@ papers:
     journal: y
     year2024: y
 
-  - title: "Networked Digital Twins for Autonomous Vehicles: A New Perspective"
+  - title: "Networked Digital Twins for Autonomous Vehicles: A New Perspective."
     authors: "Tianyi Li+, Yushuai Li, Yumeng Song, Zhongming Yao, Wei Gao, David Wenzhong Gao. "
     venue: "(JCR Q1) IEEE Transactions on Intelligent Vehicles (<b>TIV</b>), 2024."
     paper_pdf: ""
