--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -12,7 +12,7 @@ students:
       visiting: y
 
     - name: "Zhongming Yao"
-      time: "December 2023 to November 2024"
+      time: "December 2023 to November 2025"
       type: "Ph.D. candidate from Northeastern Univeristy"
       topic: "Trajectory Data Management with Blockchain"
       visiting: y
@@ -27,24 +27,30 @@ students:
       time: "October 2022 to November 2023"
       type: "Ph.D. candidate from Northeastern Univeristy"
       topic: "Spatio-Temporal Graph Neural Networks"
-      visiting: y       
+      visiting: y  
+
+    - name: "Yumeng Song"
+      time: "November 2024 to present"
+      type: "Postdoc Researcher"
+      topic: "Trajectory Analytics"
+      postdoc: y
 
     - name: "Hengyu Liu"
       time: "December 2023 to present"
-      type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
+      type: "Postdoc Researcher"
       topic: "Maritime Data Analysis"
       link: https://hengyuliu.com/
       postdoc: y
             
     - name: "Haomin Yu"
       time: "March 2024 to September 2024"
-      type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
+      type: "Postdoc Researcher"
       topic: "Maritime Data Prediction"
       postdoc: y
 
     - name: "Tiantian Liu"
       time: "September 2023 to January 2024"
-      type: "Postdoc Researcher (Joint advisors: Kristian Torp and Christian S. Jensen)"
+      type: "Postdoc Researcher"
       topic: "Optimized Maritime Communication"
       postdoc: y
 
