--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,11 +1,26 @@
 papers:
   
+  - title: "T-Assess: An Efficient Data Quality Assessment System Tailored for Trajectory Data."
+    authors: "Junhao Zhu, Tao Wang, Danlei Hu, Ziquan Fang, Lu Chen, Yunjun Gao, Tianyi Li+, Christian S. Jensen"
+    venue: "(CORE A*, CCF A) The 51st International Conference on Very Large Databases (<b>PVLDB</b>), 2025."
+    paper_pdf: ""
+    conference: y
+    year2025: y
+
+   - title: "LEAP: A Low-cost Spark SQL Query Optimizer using Pairwise Comparison."
+    authors: "Junhao Ye, Jiahui Li, Lu Chen, Yuren Mao, Yunjun Gao, Tianyi Li+"
+    venue: "(CORE A*, CCF A) The 51st International Conference on Very Large Databases (<b>PVLDB</b>), 2025."
+    paper_pdf: ""
+    conference: y
+    year2025: y
+  
   - title: "Camel: Efficient Compression of Floating-Point Time Series."
     authors: "Yuanyuan Yao, Lu Chen, Ziquan Fang, Yunjun Gao, Christian S. Jensen, Tianyi Li+."
     venue: "(CORE A*, CCF A) The 2025 ACM SIGMOD/PODS International Conference on Management of Data (<b>SIGMOD</b>), 2025."
     paper_pdf: ""
     conference: y
     year2025: y
+  
     
   - title: "Quantifying Point Contributions: A Lightweight Framework for Efficient and Effective Query-Driven Trajectory Simplification"
     authors: "Yumeng Song, Yu Gu, Tianyi Li+*, Yushuai Li, Christian S. Jensen, Ge Yu"
