--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -4,7 +4,7 @@ awards:
     time: 2022.  <i>(CORE A*, CCF A)</i>
 
   - name: "Best Paper <b>(corresponding author)</b>"
-    conference: The 8th IEEE Conference on Energy Internet and Energy System Integration 
+    conference: The 8th IEEE Conference on Energy Internet and Energy System Integration (IE<sup>2</sup>)
     time: 2024.
 
   - name: "Best Paper <b>(corresponding author)</b>"
