--- a/_data/services.yaml
+++ b/_data/services.yaml
@@ -1,7 +1,7 @@
 services:
-  - title: "IEEE Network Magazine"
+ <!--  - title: "IEEE Network Magazine"
     role: Associate Editor
-    journal: y
+    journal: y -->
 
   - title: "21st EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services (MobiQuitous 2024)"
     role: Workshop Co-chair
