--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -87,7 +87,7 @@ papers:
     year2024: y
     
   - title: "UniTE: A Survey and Unified Pipeline for Pre-training Spatiotemporal Trajectory Embeddings."
-    authors: "Yan Lin, Zeyu Zhou, Yicheng Liu, Haochen Lv, Haomin Wen, Tianyi Li, Yushuai Li, Christian S. Jensen, Shengnan Guo, Youfang Lin, Huaiyu Wan"
+    authors: "Yan Lin, Zeyu Zhou, Yicheng Liu, Haochen Lv, Haomin Wen, Tianyi Li+, Yushuai Li, Christian S. Jensen, Shengnan Guo, Youfang Lin, Huaiyu Wan."
     venue: "(JCR Q1, CCF A) IEEE Transactions on Knowledge and Data Engineering (<b>TKDE</b>), 2024."
     paper_pdf: ""
     journal: y
