--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -33,6 +33,7 @@ students:
       time: "November 2024 to present"
       type: "Postdoc Researcher"
       topic: "Trajectory Analytics"
+      link: https://yumengs.top
       postdoc: y
 
     - name: "Hengyu Liu"
