--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -3,7 +3,7 @@ awards:
     conference: The 36th IEEE International Conference on Data Engineering (ICDE)
     time: 2022.  <i>(CORE A*, CCF A)</i>
 
-  - name: "Best Paper <b>(corresponding author)</b>"
+  - name: "Best Theoretical Paper <b>(corresponding author)</b>"
     conference: The 8th IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>)
     time: 2024.
 
@@ -11,7 +11,7 @@ awards:
     conference: International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE)
     time: 2023.
 
-  - name: One of the Best Papers
+  - name: Best Student Paper
     conference: The 39th National Database Conference (NDBC)
     time: 2022. 
 
