--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,4 +1,11 @@
 papers:
+
+  - title: "SWASH: A Flexible Communication Framework with Sliding Window-Based Cache Sharing for Scalable DGNN Training."
+    authors: "Zhen Song, Yu Gu, Tianyi Li, Yushuai Li, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu."
+    venue: "(CORE A*, CCF A)  The 2025 ACM SIGMOD/PODS International Conference on Management of Data (<b>SIGMOD</b>), 2025."
+    paper_pdf: ""
+    conference: y
+    year2025: y
   
   - title: "T-Assess: An Efficient Data Quality Assessment System Tailored for Trajectory Data."
     authors: "Junhao Zhu, Tao Wang, Danlei Hu, Ziquan Fang, Lu Chen, Yunjun Gao, Tianyi Li+, Christian S. Jensen."
