--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -3,6 +3,10 @@ awards:
     conference: The 36th IEEE International Conference on Data Engineering (ICDE)
     time: 2022.  <i>(CORE A*, CCF A)</i>
 
+ - name: "Outstanding Reviewer"
+    conference: International Conference on Knowledge Discovery and Data Mining (KDD)
+    time: 2025.  <i>(CORE A*, CCF A)</i>
+    
   - name: "Best Theoretical Paper <b>(corresponding author)</b>"
     conference: The 8th IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>)
     time: 2024.
