--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -1,11 +1,11 @@
 awards:
   - name: "Best Paper <b>(first author)</b>"
     conference: The 36th IEEE International Conference on Data Engineering (ICDE)
-    time: 2022.  <i>(CORE A*, CCF A)</i>
+    time: "2022.  <i>(CORE A*, CCF A)</i>"
 
  - name: Outstanding Reviewer
     conference: 31st International Conference on Knowledge Discovery and Data Mining (KDD)
-    time: 2025.  <i>(CORE A*, CCF A)</i>
+    time: "2025.  <i>(CORE A*, CCF A)</i>"
     
   - name: "Best Theoretical Paper <b>(corresponding author)</b>"
     conference: The 8th IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>)
