--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -3,7 +3,7 @@ awards:
     conference: The 36th IEEE International Conference on Data Engineering (ICDE)
     time: "2022.  <i>(CORE A*, CCF A)</i>"
 
- - name: Outstanding Reviewer
+  - name: "Outstanding Reviewer"
     conference: 31st International Conference on Knowledge Discovery and Data Mining (KDD)
     time: "2025.  <i>(CORE A*, CCF A)</i>"
     
