--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,5 +1,12 @@
 papers:
 
+  - title: "SimRN: Trajectory Similarity Learning in Road Networks based on Distributed Deep Reinforcement Learning."
+    authors: "Danlei Hu, Yilin Li, Lu Chen, Ziquan Fang, Yushuai Li, Yunjun Gao, Tianyi Li+"
+    venue: "(CORE A*, CCF A) The 51st International Conference on Very Large Databases (<b>PVLDB</b>), 2025."
+    paper_pdf: ""
+    conference: y
+    year2025: y
+    
   - title: "SWASH: A Flexible Communication Framework with Sliding Window-Based Cache Sharing for Scalable DGNN Training."
     authors: "Zhen Song, Yu Gu, Tianyi Li+, Yushuai Li, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu."
     venue: "(CORE A*, CCF A)  The 2025 ACM SIGMOD/PODS International Conference on Management of Data (<b>SIGMOD</b>), 2025."
