--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -7,7 +7,7 @@ students:
 
     - name: "Danlei Hu"
       time: "March 2025 to March 2026"
-      type: "Ph.D. candidate from Beijing Jiaotong University"
+      type: "Ph.D. candidate from Zhejiang University"
       topic: "Spatio-temporal Data Analysis"
       visiting: y
       
